@startuml

package library.model.traffic {
  class Obstacle {
  }
}

package library.model.maritime {

  enum Region {
    REGION_A
    REGION_B
  }

  enum LateralMarkType {
    PORT_HAND
    STARBOARD_HAND
    PREFERRED_CHANNEL_TO_STARBOARD
    PREFERRED_CHANNEL_TO_PORT
  }

  enum LateralMarkColor {
    RED
    GREEN
    RED_GREEN_RED
    GREEN_RED_GREEN
  }

  enum LateralMarkShape {
    CAN
    CONE
    PILLAR
    SPAR
  }

  class LightSignal {
      - pattern : SimulationProperty<LighthousePattern>
      - period : SimulationProperty<Double>
      - nominalRange : SimulationProperty<Double>
      - color : SimulationProperty<LightColor>
  }

  class LateralMark {
    - name : SimulationProperty<String>
    - markType : SimulationProperty<LateralMarkType>
    - region : SimulationProperty<Region>
    - number : SimulationProperty<String>
    - color : SimulationProperty<LateralMarkColor>
    - shape : SimulationProperty<LateralMarkShape>
    - lightSignal : LightSignal

    - applyStandardAppearance(LateralMarkType, Region, LateralMarkShape)
  }

  ' Beziehungen
  LateralMark -up-|> library.model.traffic.Obstacle

  LateralMark o-- LateralMarkType
  LateralMark o-- Region
  LateralMark o-- LateralMarkColor
  LateralMark o-- LateralMarkShape
  LateralMark o-r- LightSignal
}

@enduml